--- a/JiaoBaoYun-hb/html/show/show-sub.html
+++ b/JiaoBaoYun-hb/html/show/show-sub.html
@@ -200,7 +200,7 @@
 		</div>
 		<script src="../../js/utils/events.js"></script>
 		<script src="../../js/utils/h5fresh.js"></script>
-		<script src="../../js/utils/slide-selector.js"></script>
+		<!--<script src="../../js/utils/slide-selector.js"></script>-->
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/show/show-sub.js"></script>
 		<script type="text/javascript" src="../../js/utils/native.js"></script>
