作业界面显示图片

--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -54,7 +54,7 @@
 						<a id="getVideo" class="mui-icon iconfont icon-shipin"></a>
 					</div>
 				</div>
-				<div id="pictures" class="img-container temWork-teaHint"></div>
+				<div id="pictures" class="img-container imgs-extras"></div>
 				<div class="mui-input-row">
 					<label class="submit-label">需学生在线提交</label>
 					<div id="onlineSwitch" class="mui-switch mui-active mui-switch-green online-switch">
