--- a/JiaoBaoYun-hb/html/homework/workdetail-stu.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-stu.html
@@ -8,8 +8,9 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
-		<link href="../../css/utils/preview.css" rel="stylesheet" />
+		
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
+		<link href="../../css/utils/preview.css" rel="stylesheet" />
 		<link href="../../css/homework/subjects-icon.css" rel="stylesheet" />
 		<link href="../../css/homework/workdetail-stu.css" rel="stylesheet"/>
 	</head>
@@ -34,8 +35,11 @@
 		    <div class="answer-content">
 		    </div>
 		    <div class="homework-detail">
-		    	<p class="brief-content"></p>
-		    	<div id="brief-imgs" class="brief-imgs"></div>
+		    	<p class="brief-content">
+		    		
+		    	</p>
+		    	<div id="brief-imgs" class="brief-imgs">
+		    	</div>
 		    </div>
 		    <div class="startWork-container">
 		    	<p class='startWork-hint'>作业需要在线提交，点击完成</p>
@@ -45,8 +49,7 @@
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/mui.zoom.js "></script>
-		<script src="../../js/mui.previewimage.js "></script>
-		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/mui.previewimage.js"></script>
 		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/events.js" type="text/javascript"></script>
