--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-sub.html
@@ -15,7 +15,7 @@
 		<div class="mui-content">
 			<div class="experts-content">
 				<div class="experts-show">
-					<p><span class="mui-icon iconfont icon-zhuanjia expert-icon"></span>&nbsp;&nbsp;专家风采</p>
+					<p class="export-show"><span class="mui-icon iconfont icon-zhuanjia expert-icon"></span>&nbsp;&nbsp;专家风采</p>
 				</div>
 				<div id="experts_sw" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div id="experts_sc" class="mui-scroll">
@@ -27,6 +27,7 @@
 					</div>
 				</div>
 			</div>
+			<div class="mui-table-view-divider"></div>
 			<div class="mui-scroll">
 				<ul id="list-container" class="mui-table-view">
 				</ul>
