--- a/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
@@ -21,23 +21,23 @@
 			.mui-content {
 				background-color: white;
 			}
-
+			
 			.mui-slider .mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
 				border-bottom: 2px solid #00A5E0;
 			}
-
+			
 			.mui-scroll-wrapper {
 				background-color: white;
 			}
-
+			
 			.mui-segmented-control.mui-scroll-wrapper {
 				height: 40px;
 			}
-
+			
 			.mui-slider-indicator.mui-segmented-control {
 				background-color: #F8F9FB;
 			}
-
+			
 			.more-navigation {
 				position: absolute;
 				height: 40px;
@@ -50,75 +50,75 @@
 				z-index: 999;
 				background-color: #F8F9FB;
 			}
-
+			
 			.more-navigation p {
 				line-height: 50%;
 			}
-
+			
 			.more-navigation a {
 				color: #8f8f94;
 			}
-
+			
 			.mui-slider .mui-segmented-control.mui-segmented-control-inverted~.mui-slider-group .mui-slider-item {
 				border-top: none;
 				border-bottom: none;
 			}
-
+			
 			.mui-table-view-cell:before,
 			.mui-table-view-cell:after {
 				left: 0px;
 			}
-
+			
 			.mui-slider .mui-slider-group .mui-slider-item .mui-table-view-cell:after {
 				height: 1px;
 			}
-
+			
 			.mui-pull-bottom-wrapper {
 				/*底部加载更多区域*/
 				background-color: white;
 			}
-
+			
 			.mui-slider .mui-slider-group .mui-slider-item img {
 				height: 50px;
 				width: 50px;
 				max-height: 50px;
 				max-width: 50px;
 			}
-
+			
 			.mui-table-view-cell {
 				line-height: 32px;
 			}
-
+			
 			.mui-media-object.expert-headimg {
 				/*专家头像*/
 				border-radius: 50% !important;
 				margin-top: 4px;
 				margin-bottom: 10px;
 			}
-
+			
 			.expert-name {
 				/*专家姓名*/
 				width: 35%;
 			}
-
+			
 			.mui-media-object.expert-level {
 				/*专家等级*/
 				height: 20px !important;
 				width: 20px !important;
 			}
-
+			
 			.expert-answernum {
 				/*专家回答数*/
 				color: red;
 			}
-
+			
 			.mui-btn-blue {
 				/*提问按钮*/
 				background-color: #1DB8F1;
 				border: 1px solid #1DB8F1;
 				margin-top: 15px;
 			}
-
+			
 			.expert-usernote {
 				/*专家简介*/
 				line-height: 21px;
@@ -171,6 +171,14 @@
 			var main = plus.webview.currentWebview(); //获取当前窗体对象
 			mainData = main.data; //接收页面传入参数值
 			console.log('experts_main.html:' + JSON.stringify(mainData));
+
+			//从提问详情页，点击邀请专家回答，传值
+			window.addEventListener('experts_main', function(event) {
+				//赋值
+				ExpertsInfo = event.detail.data;
+				console.log('点击邀请专家回答，传值：' + JSON.stringify(ExpertsInfo));
+
+			});
 
 			document.getElementById("content").innerHTML = '\
 				<div id="slider" class="mui-slider mui-fullscreen">\
@@ -398,6 +406,7 @@
 		function getExpertsArray(channelId, pageIndex) {
 			//需要加密的数据
 			var comData = {
+				askId: '0', //问题ID，传入0，则不包括问题参数
 				userIds: '[0]', //用户编号列表,Array,传入0，获取所有专家
 				channelId: channelId.toString(), //话题ID,传入0，获取所有话题数据
 				pageIndex: pageIndex, //当前页数
