--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-question.html
@@ -14,9 +14,9 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">提问</h1>
-			<a class="mui-icon iconfont icon-ruqun mui-pull-right"></a>
+			<a class="mui-icon iconfont icon-ruqun mui-pull-right" id="addExpert"></a>
 		</header>
-		
+
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
@@ -30,7 +30,11 @@
 					askID = e.detail.data;
 				});
 
-				
+				//点击右上角邀请专家按钮
+				events.addTap('addExpert', function() {
+					events.openNewWindowWithData('experts_main.html', askID);
+				});
+
 			});
 		</script>
 	</body>
