--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -326,16 +326,30 @@
 				});
 
 				var self = plus.webview.currentWebview();
-				var parentVebView = self.opener();
+				var androidHeight;
+				if(mui.os.android) {
+					events.closeWaiting();
+					androidHeight = plus.android.invoke(plus.android.currentWebview(), "getHeight");
+				}
 				//防止 父页面选项卡被输入法撑起
 				window.addEventListener('resize', function() {
-					var a = plus.android.invoke(plus.android.currentWebview(), "getHeight");
-					var b = plus.navigator.getStatusbarHeight();
-					var c = plus.screen.resolutionHeight;
-					var d = (c - a - b);
-					console.info('webview高度：' + a + " 状态栏高度：" + b + " 屏幕高度：" + c + " 输入法高度:" + d)
-					//d > 0 ? self.setStyle({ top: '45px', bottom: '0px' }) : self.setStyle({ top: '45px', bottom: '50px' });
-					//d > 0 ? parentVebView.evalJS("mui('#nav_tab').css('position','absolute');") : parentVebView.evalJS("mui('#nav_tab').css('position','fixed');");
+					if(mui.os.android) {
+						console.log('androidHeight ' + androidHeight);
+						var a = plus.android.invoke(plus.android.currentWebview(), "getHeight");
+						var b = plus.navigator.getStatusbarHeight();
+						var c = plus.screen.resolutionHeight;
+						var d = (c - a - b);
+						console.info('webview高度：' + a + " 状态栏高度：" + b + " 屏幕高度：" + c + " 输入法高度:" + d)
+						if(a < androidHeight) {
+							self.setStyle({
+								bottom: '0px'
+							});
+						} else {
+							self.setStyle({
+								bottom: '50px'
+							});
+						}
+					}
 				}, false);
 				//-----------设置数据end-----------------
 
