--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -173,6 +173,10 @@
 						mui.toast('请确认新密码');
 						return;
 					}
+					if (phoneNumber.value == newpw0) {
+						mui.toast('新密码不能和原密码相同');
+						return;
+					}
 					if(newpw0 != newpw1) {
 						mui.toast('两次输入的密码不一致');
 						return;
