调整输入框

--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
@@ -171,9 +171,9 @@
 				subData = main.data; //接收页面传入的参数值
 				console.log('从父页面获取的数据:' + JSON.stringify(subData));
 				//---从父页面获取数据---end---
-				main.setStyle({
-					softinputMode:'adjustResize'
-				});
+//				main.setStyle({
+//					softinputMode:'adjustResize'
+//				});
 				var call_type = ''; //记录最后点击的点到类型
 				var call_input = ''; //记录点到的备注
 				var commit = false; //是否允许提交
