1、老师作业详情 学生评论界面加图片 2、家长圈列表无法滚动的问题 3、展现

--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -16,16 +16,19 @@
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/events.js" type="text/javascript"></script>
 		<style type="text/css">
-		/*标题图片*/
+			/*标题图片*/
+			
 			.subject-icon {
 				font-size: 50px;
 			}
 			/*cell标题*/
+			
 			.divider-color {
 				color: #383838;
 				background-color: #f2f3f5;
 			}
 			/*cell*/
+			
 			.cell-color {
 				color: #808080;
 				background-color: white;
@@ -65,12 +68,14 @@
 						</div>
 						<div class="mui-media-body">
 							<font id="homeWorkContent" style="color: #747474;"></font>
+							
 						</div>
 					</li>
 					<li id="stuHomework" class="mui-table-view-divider divider-color">学生答案</li>
 					<li id="stuCell" class="mui-table-view-cell">
 						<div class="mui-media-body">
 							<font id="stuResult" class="cell-color"></font>
+							<div id="brief-imgs" class="brief-imgs"></div>
 						</div>
 					</li>
 					<li id="comment" class="mui-table-view-divider divider-color">作业评语</li>
