--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -17,19 +17,19 @@
 		<script src="../../js/mui.min.js"></script>
 
 		<style type="text/css">
-		/*.mui-table-view:before,
+			/*.mui-table-view:before,
 			.mui-table-view:after,
 			.mui-table-view-cell:after {
 				height: 0px;
 				/*去掉横线
 		}*/
-		 .dynamic-personal-image {
-			/*个人头像圆形*/
 			
-			border-radius: 50%;
-			width: 50px;
-			height: 50px;
-		}
+			.dynamic-personal-image {
+				/*个人头像圆形*/
+				border-radius: 50%;
+				width: 50px;
+				height: 50px;
+			}
 		</style>
 
 	</head>
@@ -58,7 +58,10 @@
 
 						<div id='content' class="mui-media-body">
 							<p id="homeWorkContent"></p>
+							<div id="brief-imgs" class="brief-imgs">
+							</div>
 						</div>
+
 						<div align="center" style="visibility: hidden;max-height: 100px;">
 							<button id="checkDetail" type="button" class=" " style="border-radius: 10px;width: 100px;margin-top:15px ;">查看详情<span class="mui-icon mui-icon-arrowdown"></span></button>
 						</div>
@@ -122,19 +125,19 @@
 				alertAllBtn: document.getElementById("alertAll")
 			}
 			var imgType = {
-					chineseImg: '../../image/homework/chinese.png',
-					mathImg: '../../image/homework/math.png',
-					biologyImg: '../../image/homework/biology.png',
-					chemistryImg: '../../image/homework/chemistry.png',
-					englishImg: '../../image/homework/english.png',
-					otherImg: '../../image/homework/other.png',
-					physicsImg: '../../image/homework/physics.png',
-					politicalImg: '../../image/homework/political.png',
-					historyImg: '../../image/homework/history.png',
-					yuwenImg: '../../image/homework/yuwen.png',
-					geographyImg: '../../image/homework/geography.png'
-				}
-				//从主页传值到这个界面的model
+				chineseImg: '../../image/homework/chinese.png',
+				mathImg: '../../image/homework/math.png',
+				biologyImg: '../../image/homework/biology.png',
+				chemistryImg: '../../image/homework/chemistry.png',
+				englishImg: '../../image/homework/english.png',
+				otherImg: '../../image/homework/other.png',
+				physicsImg: '../../image/homework/physics.png',
+				politicalImg: '../../image/homework/political.png',
+				historyImg: '../../image/homework/history.png',
+				yuwenImg: '../../image/homework/yuwen.png',
+				geographyImg: '../../image/homework/geography.png'
+			}
+			//从主页传值到这个界面的model
 			var homeworkModel = {
 				//				"Contents": "Test",
 				//				"HomeworkId": 28,
@@ -357,7 +360,19 @@
 				homeworkDetailNodes.publishDate.innerHTML = unick + '&nbsp&nbsp&nbsp&nbsp<span>' + homeworkModel.Date + '</span>'
 
 				homeworkDetailNodes.content.innerText = homeworkDetailModel.Contents;
+				document.getElementById('brief-imgs').innerHTML = getImgsInner(homeworkDetailModel.File);
 
+			}
+			var getImgsInner = function(imgs) {
+				var imgInner = '';
+				var img_width = "33.33333%";
+				if(imgs && imgs.length > 0) {
+					for(var i in imgs) {
+						imgInner += '<img style="width:' + img_width + ';" src="' + imgs[i].ThumbUrl +
+							'" data-preview-src="' + imgs[i].Url + '" data-preview-group="' + imgs[i].FileType + '"/>';
+					}
+				}
+				return imgInner;
 			}
 
 			function refreshStuList() {
@@ -381,8 +396,8 @@
 					mui.extend(li.workInfo, homeworkDetailModel)
 					li.className = 'mui-table-view-cell mui-media isCommented'
 					li.innerHTML = '<img  class="mui-media-object mui-pull-left dynamic-personal-image" src="' + headImg + '" />' +
-						'<div class="mui-media-body">' +events.shortForString(uploadArray[i].ugnick, 12)
-						 + '<div class="mui-media-body mui-pull-right" ' +
+						'<div class="mui-media-body">' + events.shortForString(uploadArray[i].ugnick, 12) +
+						'<div class="mui-media-body mui-pull-right" ' +
 						'<p id="isCommented' + i + '" style="font-size: 13px;">' + IsCommented + '<span class="mui-icon mui-icon-forward"></span></p></div>' +
 						'</div>'
 
@@ -408,7 +423,7 @@
 
 					li.innerHTML = '<img  class="mui-media-object mui-pull-left dynamic-personal-image" src="' + headImg + '" />' +
 						'<div class="mui-media-body">' +
-						'<div style = "padding-top:10px">' +events.shortForString(remainArray[i].ugnick, 12)  + '<button id="alert' + i + '" style="float: right;width:50px;height:30px;padding:1px 0 0 1px;font-size:12px;margin-top:-7px;" onclick="alertStu(this)"' + disabled + '>' +
+						'<div style = "padding-top:10px">' + events.shortForString(remainArray[i].ugnick, 12) + '<button id="alert' + i + '" style="float: right;width:50px;height:30px;padding:1px 0 0 1px;font-size:12px;margin-top:-7px;" onclick="alertStu(this)"' + disabled + '>' +
 						alert +
 						'</button>' + '</div>' +
 						'</div>';
