--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-addAnswer.html
@@ -19,7 +19,7 @@
 		</header>
 
 		<div class="mui-content">
-			<p id="askTitle" style="margin-left: 10px;font-size: 14px;margin-top: 5px;"></p>
+			<p id="askTitle" style="margin-left: 10px;font-size: 14px;margin-top: 5px;word-wrap: break-word;"></p>
 			<div class="input-content">
 				<textarea id="answerContent" placeholder="添加回答,最多4000字"></textarea>
 				<div id="take_pic" class="take_pic file-extras">
