--- a/JiaoBaoYun-hb/html/qiuzhi/heAttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/heAttentionPersons.html
@@ -406,7 +406,7 @@
 				})
 			}
 			var setListener = function() {
-				mui('.mui-table-view').on('tap', '.mui-btn', function() {
+				mui('.mui-table-view').on('tap', '.attention-btn', function() {
 					var focusType;
 					switch(this.personInfo.FocusType) {
 						case 0:
