--- a/JiaoBaoYun-hb/html/qiuzhi/heAttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/heAttentionPersons.html
@@ -238,7 +238,7 @@
 
 			//27.获取某个用户的关注人列表
 			function getFocusUsersByUser(focusId) {
-				if(pageIndex==1){
+				if(pageIndex == 1) {
 					events.clearChild(document.getElementById('list-container'));
 				}
 				personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid; //当前登录账号utid
@@ -347,13 +347,13 @@
 				li.querySelector('.mui-btn').personInfo = record;
 			}
 			/**
- * 根据信息，设置关注状况
- * @param {Object} focusType 
- * 0 未关注
-	1 已关注
-	2 相互关注
-	3 无法关注（自己）
- */
+			 * 根据信息，设置关注状况
+			 * @param {Object} focusType 
+			 * 0 未关注
+				1 已关注
+				2 相互关注
+				3 无法关注（自己）
+			 */
 			var getButtonContent = function(focusType) {
 				var buttonInfo = {};
 				switch(focusType) {
@@ -397,9 +397,12 @@
 							mui.toast('关注成功！')
 							item.className = 'mui-btn mui-btn-outlined attentioned-btn';
 							item.innerText = '已关注';
+							item.personInfo.FocusType = 1;
 						} else {
 							mui.toast('取消关注成功！')
 							item.className = 'mui-btn mui-btn-outlined attention-btn';
+							item.innerText = "关注";
+							item.personInfo.FocusType = 0;
 						}
 
 					}
@@ -420,9 +423,9 @@
 						default:
 							break;
 					}
-					if(focusType == 1) {
-						setFocus(this, focusType);
-					}
+					//					if(focusType == 1) {
+					setFocus(this, focusType);
+					//					}
 				});
 
 				//点击头像、昵称、简介进入专家主页
